0032461: Visualization - expensive call of glGetTexEnviv/glTexEnvi in each render of OpenGl_Text

(cherry picked from commit 709a657363abee1b3092eb72f906dd87409303d3)
(cherry picked from commit 658ce9b4501dab8a16e17321f6b1ee4b8e0c8584)